--- a/danusys-commons-auth/pom.xml
+++ b/danusys-commons-auth/pom.xml
@@ -105,6 +105,10 @@
             <groupId>org.springframework</groupId>
             <artifactId>spring-context</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.thymeleaf</groupId>
+            <artifactId>thymeleaf</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
