--- a/danusys-drone/src/main/resources/application-dev.properties
+++ b/danusys-drone/src/main/resources/application-dev.properties
@@ -56,3 +56,17 @@ F
 spring.boot.admin.client.instance.service-url=http://localhost:8084
 management.endpoints.web.exposure.include=*
 management.endpoint.shutdown.enabled=true
+
+
+zuul.routes.dapi-kakao-com.path=/dapi-kakao-com/**
+zuul.routes.dapi-kakao-com.url=http://dapi.kakao.com/
+
+zuul.routes.ssl-daumcdn-net.path=/ssl-daumcdn-net/**
+zuul.routes.ssl-daumcdn-net.url=http://ssl.daumcdn.net/
+
+zuul.routes.t1-daumcdn-net.path=/t1-daumcdn-net/**
+zuul.routes.t1-daumcdn-net.url=http:/t1.daumcdn.net/
+
+zuul.routes.map-daumcdn-net.path=/map-daumcdn-net/**
+zuul.routes.map-daumcdn-net.url=http://map.daumcdn.net/
+
