--- a/danusys-drone/pom.xml
+++ b/danusys-drone/pom.xml
@@ -174,6 +174,13 @@
             <version>3.17</version>
             <scope>compile</scope>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-zuul</artifactId>
+            <version>2.2.7.RELEASE</version>
+        </dependency>
+
     </dependencies>
 
 
