--- a/danusys-commons-app/pom.xml
+++ b/danusys-commons-app/pom.xml
@@ -100,6 +100,10 @@
             <artifactId>commons-text</artifactId>
             <version>1.9</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-webmvc</artifactId>
+        </dependency>
 
     </dependencies>
 
