--- a/danusys-drone/src/main/resources/application-dev.properties
+++ b/danusys-drone/src/main/resources/application-dev.properties
@@ -10,7 +10,7 @@ server.port=8300
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://172.20.20.201:5432/drone
 spring.datasource.username=gm
-spring.datasource.password=Danu1002!!f
+spring.datasource.password=Danu1002!!
 
 
 
