--- a/danusys-platform/src/main/resources/application-dev.properties
+++ b/danusys-platform/src/main/resources/application-dev.properties
@@ -21,6 +21,8 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL95Dialect
 spring.jpa.properties.hibernate.use_sql_comments=false
 #\uCFFC\uB9AC\uBB38\uC758 \uD30C\uB77C\uBBF8\uD130
 #logging.level.org.hibernate.type.descriptor.sql=trace
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+
 
 #ribbon.eureka.enabled=false
 zuul.routes.dapi-kakao-com.path=/dapi-kakao-com/**
