--- a/danusys-platform/src/main/resources/application-dev.properties
+++ b/danusys-platform/src/main/resources/application-dev.properties
@@ -19,6 +19,7 @@ spring.jpa.hibernate.ddl-auto=none
 spring.jpa.generate-ddl=false
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL95Dialect
 spring.jpa.properties.hibernate.use_sql_comments=false
+spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
 #\uCFFC\uB9AC\uBB38\uC758 \uD30C\uB77C\uBBF8\uD130
 #logging.level.org.hibernate.type.descriptor.sql=trace
 
