--- a/danusys-commons-app/pom.xml
+++ b/danusys-commons-app/pom.xml
@@ -112,6 +112,12 @@
             <version>1.9</version>
         </dependency>
 
+        <!-- Logback -->
+        <dependency>
+            <groupId>org.codehaus.janino</groupId>
+            <artifactId>janino</artifactId>
+            <version>3.1.6</version>
+        </dependency>
 
     </dependencies>
 
