--- a/danusys-drone/pom.xml
+++ b/danusys-drone/pom.xml
@@ -107,6 +107,12 @@
         </dependency>
 
         <dependency>
+            <groupId>com.danusys.web</groupId>
+            <artifactId>danusys-tcp-server</artifactId>
+            <version>${revision}</version>
+        </dependency>
+
+        <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <version>1.18.20</version>
