--- a/danusys-commons-tcp-server/pom.xml
+++ b/danusys-commons-tcp-server/pom.xml
@@ -60,6 +60,12 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>io.dronefleet.mavlink</groupId>
+            <artifactId>mavlink</artifactId>
+            <version>1.1.9</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <build>
