--- a/danusys-commons-tcp/src/main/resources/application-tcp.properties
+++ b/danusys-commons-tcp/src/main/resources/application-tcp.properties
@@ -4,5 +4,9 @@ netty.worker-count=10
 netty.keep-alive=true
 netty.backlog=100
 
+spring.thymeleaf.cache=false
+spring.thymeleaf.check-template-location=true
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
 
 logging.level.org.springframework.integration=debug
