--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
         <module>danusys-commons-auth</module>
         <module>danusys-commons-api</module>
         <module>danusys-commons-ui</module>
-        <module>danusys-commons-tcp-server</module>
+        <module>danusys-commons-tcp</module>
         <module>danusys-platform</module>
         <module>danusys-drone</module>
         <module>danusys-commons-crypto</module>
