--- a/danusys-drone/pom.xml
+++ b/danusys-drone/pom.xml
@@ -107,12 +107,6 @@
         </dependency>
 
         <dependency>
-            <groupId>com.danusys.web</groupId>
-            <artifactId>danusys-commons-tcp-server</artifactId>
-            <version>${revision}</version>
-        </dependency>
-
-        <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <version>1.18.20</version>
@@ -220,11 +214,12 @@
             <version>0.9.0-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
+
         <dependency>
             <groupId>com.danusys.web</groupId>
-            <artifactId>danusys-commons-tcp</artifactId>
+            <artifactId>danusys-commons-socket</artifactId>
             <version>0.9.0-SNAPSHOT</version>
-            <scope>compile</scope>
+
         </dependency>
 
     </dependencies>
