--- a/danusys-platform/src/main/resources/application-dev.properties
+++ b/danusys-platform/src/main/resources/application-dev.properties
@@ -120,3 +120,8 @@ homePage.url=/pages/mntr
 ## loginPage Path
 
 loginPage.path=layout/layout_login
+
+#login
+loginPage.kor.title=\uAD11\uBA85\uC2DC \uC2A4\uB9C8\uD2B8\uC2DC\uD2F0 IoT\uD50C\uB7AB\uD3FC
+loginPage.eng.title=Gwangmyeong Smart City IoT Platform
+loginPage.logo=login_ci_gimje.svg
