--- a/danusys-platform/pom.xml
+++ b/danusys-platform/pom.xml
@@ -223,6 +223,11 @@
             <version>1.13.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.thymeleaf.extras</groupId>
+            <artifactId>thymeleaf-extras-springsecurity5</artifactId>
+        </dependency>
+
         <!--		<dependency>-->
         <!--			<groupId>com.google.guava</groupId>-->
         <!--			<artifactId>guava</artifactId>-->
