--- a/danusys-drone/src/main/resources/application-dev.properties
+++ b/danusys-drone/src/main/resources/application-dev.properties
@@ -99,4 +99,4 @@ defaultFailureUrl =/login/errorTest
 
 permit.all.page.basic=/js/**,/css/**,/webjars/**,/login/error,/font/**,/images/**,/mntr/**,/resources/**,/api/**,/aepel/**,/favicon.ico,/selectNoSession/**,/file/**,/sound/**,/svg/**,/ui/**,/swagger-ui/**
 
-permit.all.page.add=/auth/generateToken,/loginpage,/loginpage2,/hi234,/auth/**,/permitallpage,/logn/errorTest,/loginpagetest,/
+permit.all.page.add=/auth/generateToken,/loginpage,/loginpage2,/hi234,/auth/**,/permitAllPage,/logn/errorTest,/loginpagetest,/
