--- a/danusys-platform/src/main/resources/application-dev.properties
+++ b/danusys-platform/src/main/resources/application-dev.properties
@@ -12,7 +12,7 @@ spring.datasource.username=gm
 spring.datasource.password=Danu1002!!
 
 spring.jpa.database=postgresql
-#spring.jpa.show-sql=true
+spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
 spring.jpa.hibernate.ddl-auto=none
@@ -85,8 +85,6 @@ logging.level.com.danusys.web=trace
 #logging.level.org.hibernate=trace
 #logging.level.org.hibernate.SQL=trace
 
-
-
 danusys.file.extension=jsp,cgi,php,asp,aspx,exe,com,html,htm,cab,php3,pl,java,class,js,css
 
 
@@ -107,14 +105,15 @@ defaultHomeUrl=/loginpagetest
 
 defaultFailureUrl =/
 
-permit.all.page.basic=/js/**,/css/**,/webjars/**,/login/error,/font/**,/images/**,/mntr/**,/resources/**,/api/**,/aepel/**,/favicon.ico,/selectNoSession/**,/file/**,/sound/**,/svg/**,/ui/**,/swagger-ui/**
+permit.all.page.basic=/js/**,/css/**,/webjars/**,/login/error,/font/**,/images/**,/resources/**,/api/**,/aepel/**,/favicon.ico,/selectNoSession/**,/file/**,/sound/**,/svg/**,/ui/**,/swagger-ui/**
 
 
 
-permit.all.page.add=/auth/generateToken,/loginpage,/loginpage2,/hi234,/auth/**,/permitallpage,/login/errorTest,/loginpagetest,/
-role.manager.page=/test/**,/hi,/permitmanagerpage 
+permit.all.page.add=/auth/generateToken,/loginpage,/loginpage2,/hi234,/auth/**,/permitAllPage,/login/errorTest,/loginpagetest,/
+role.admin.page=/hitest2,/tokenTest,/auth/regenerateToken,/test2,/permitAdminPage
+role.manager.page=/test/**,/hi,/permitManagerPage
 
-role.admin.page=/hitest2,/tokenTest,/auth/regenerateToken,/test2,/permitadminpage
+role.menu.page=dashboard-/pages/dashboard/**,inqry-/pages/inqry/**,config-/pages/config/**,config-/pages/config/**,config-/pages/config/**
 
 ## move HomePage url
 homePage.url=/pages/mntr
