--- a/danusys-platform/src/main/resources/application-gm.properties
+++ b/danusys-platform/src/main/resources/application-gm.properties
@@ -109,10 +109,10 @@ defaultFailureUrl =/login/errorTest
 
 permit.all.page.basic=/js/**,/css/**,/webjars/**,/login/error,/font/**,/images/**,/mntr/**,/resources/**,/api/**,/aepel/**,/favicon.ico,/selectNoSession/**,/file/**,/sound/**,/svg/**,/ui/**,/swagger-ui/**
 
-permit.all.page.add=/auth/generateToken,/loginpage,/loginpage2,/hi234,/auth/**,/permitallpage,/login/errorTest,/loginpagetest,/
-role.manager.page=/test/**,/hi,/permitmanagerpage
+permit.all.page.add=/auth/generateToken,/loginpage,/loginpage2,/hi234,/auth/**,/permitAllPage,/login/errorTest,/loginpagetest,/
+role.manager.page=/test/**,/hi,/permitManagerPage
 
-role.admin.page=/hitest2,/tokenTest,/auth/regenerateToken,/test2,/permitadminpage
+role.admin.page=/hitest2,/tokenTest,/auth/regenerateToken,/test2,/permitAdminPage
 
 ## move HomePage url
 homePage.url=/pages/mntr
