--- a/danusys-smartMetering/src/main/resources/application-local.properties
+++ b/danusys-smartMetering/src/main/resources/application-local.properties
@@ -19,6 +19,8 @@ spring.thymeleaf.check-template-location=true
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 
+#ErrorController ???
+server.error.path=/common/error.do
 
 #danusys.path.root=${user.home}
 #danusys.file.upload.path=/dev/upload
@@ -31,9 +33,10 @@ defaultHomeUrl=/admin/loginForm.do
 defaultFailureUrl=/admin/loginForm.do
 
 
+
 permit.all.page.basic=/js/**,/css/**,/webjars/**,/login/error,/font/**,/images/**,/mntr/**,/resources/**,/api/**,/aepel/**,/favicon.ico,/selectNoSession/**,/file/**,/sound/**,/svg/**,/ui/**,/swagger-ui/**
 
-permit.all.page.add=/auth/generateToken,/loginpage,/loginpage2,/hi234,/auth/**,/permitallpage,/login/errorTest,/loginpagetest,
+permit.all.page.add=/auth/generateToken,/loginpage,/loginpage2,/hi234,/auth/**,/permitallpage,/login/errorTest,/loginpagetest,/
 
 
 ##secretKey
