--- a/danusys-platform/src/main/resources/application-dev.properties
+++ b/danusys-platform/src/main/resources/application-dev.properties
@@ -113,7 +113,8 @@ permit.all.page.add=/auth/generateToken,/loginpage,/loginpage2,/hi234,/auth/**,/
 role.admin.page=/hitest2,/tokenTest,/auth/regenerateToken,/test2,/permitAdminPage
 role.manager.page=/test/**,/hi,/permitManagerPage
 
-role.menu.page=dashboard-/pages/dashboard/**,inqry-/pages/inqry/**,config-/pages/config/**,config-/pages/config/**,config-/pages/config/**
+role.menu.page=dashboard-/pages/dashboard/**,inqry-/pages/inqry/**,stats-/pages/config/**,config-/pages/config/**
+  #,mntr-/pages/mntr/**
 
 ## move HomePage url
 homePage.url=/pages/mntr
