--- a/danusys-commons-app/pom.xml
+++ b/danusys-commons-app/pom.xml
@@ -119,6 +119,12 @@
             <version>3.1.6</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20211205</version>
+        </dependency>
+
     </dependencies>
 
     <build>
