--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
         <module>danusys-commons-mqtt</module>
         <module>danusys-platform</module>
         <module>danusys-drone</module>
-        <module>danusys-smartMetering</module>
+<!--        <module>danusys-smartMetering</module>-->
         <module>danusys-server-netty</module>
         <module>danusys-server-socket</module>
         <module>demo</module>
