--- a/danusys-platform/src/main/resources/application-dev.properties
+++ b/danusys-platform/src/main/resources/application-dev.properties
@@ -12,8 +12,8 @@ spring.datasource.username=gm
 spring.datasource.password=Danu1002!!
 
 spring.jpa.database=postgresql
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.format_sql=false
 
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.generate-ddl=false
