--- a/danusys-platform/pom.xml
+++ b/danusys-platform/pom.xml
@@ -35,16 +35,16 @@
             <artifactId>mybatis-spring-boot-starter</artifactId>
             <version>2.2.0</version>
         </dependency>
-<!--        <dependency>-->
-<!--            <groupId>org.apache.poi</groupId>-->
-<!--            <artifactId>poi</artifactId>-->
-<!--            <version>3.17</version>-->
-<!--        </dependency>-->
-<!--        <dependency>-->
-<!--            <groupId>org.apache.poi</groupId>-->
-<!--            <artifactId>poi-ooxml</artifactId>-->
-<!--            <version>3.17</version>-->
-<!--        </dependency>-->
+        <!--        <dependency>-->
+        <!--            <groupId>org.apache.poi</groupId>-->
+        <!--            <artifactId>poi</artifactId>-->
+        <!--            <version>3.17</version>-->
+        <!--        </dependency>-->
+        <!--        <dependency>-->
+        <!--            <groupId>org.apache.poi</groupId>-->
+        <!--            <artifactId>poi-ooxml</artifactId>-->
+        <!--            <version>3.17</version>-->
+        <!--        </dependency>-->
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-zuul</artifactId>
@@ -78,10 +78,10 @@
             <scope>provided</scope>
         </dependency>
 
-<!--        <dependency>-->
-<!--            <groupId>org.springframework.boot</groupId>-->
-<!--            <artifactId>spring-boot-starter-data-jpa</artifactId>-->
-<!--        </dependency>-->
+        <!--        <dependency>-->
+        <!--            <groupId>org.springframework.boot</groupId>-->
+        <!--            <artifactId>spring-boot-starter-data-jpa</artifactId>-->
+        <!--        </dependency>-->
         <!--		<dependency>-->
         <!--			<groupId>org.springframework.boot</groupId>-->
         <!--			<artifactId>spring-boot-starter-data-rest</artifactId>-->
@@ -227,20 +227,51 @@
             <groupId>org.thymeleaf.extras</groupId>
             <artifactId>thymeleaf-extras-springsecurity5</artifactId>
         </dependency>
-    </dependencies>
 
-    <profiles>
-        <profile>
-            <id>local</id>
-            <properties>
-                <env>local</env>
-                <tpath>classes</tpath>
-            </properties>
-            <activation>
-                <activeByDefault>true</activeByDefault>
-            </activation>
-        </profile>
-    </profiles>
+        <!--		<dependency>-->
+        <!--			<groupId>com.google.guava</groupId>-->
+        <!--			<artifactId>guava</artifactId>-->
+        <!--			<version>23.0</version>-->
+        <!--		</dependency>-->
+
+        <!--		<dependency>-->
+        <!--			<groupId>egovframework.rte</groupId>-->
+        <!--			<artifactId>egovframework.rte.fdl.excel</artifactId>-->
+        <!--			<version>${egovframework.rte.version}</version>-->
+        <!--		</dependency>-->
+
+        <!--		<dependency>-->
+        <!--			<groupId>org.springframework.boot</groupId>-->
+        <!--			<artifactId>spring-boot-starter-web-services</artifactId>-->
+        <!--		</dependency>-->
+        <!--		<dependency>-->
+        <!--			<groupId>wsdl4j</groupId>-->
+        <!--			<artifactId>wsdl4j</artifactId>-->
+        <!--		</dependency>-->
+
+
+        <!-- https://mvnrepository.com/artifact/javax.xml.bind/jaxb-api -->
+        <!--		<dependency>-->
+        <!--			<groupId>javax.xml.bind</groupId>-->
+        <!--			<artifactId>jaxb-api</artifactId>-->
+        <!--			<version>2.3.1</version>-->
+        <!--		</dependency>-->
+
+        <!--		&lt;!&ndash; https://mvnrepository.com/artifact/javax.activation/activation &ndash;&gt;-->
+        <!--		<dependency>-->
+        <!--			<groupId>javax.activation</groupId>-->
+        <!--			<artifactId>activation</artifactId>-->
+        <!--			<version>1.1.1</version>-->
+        <!--		</dependency>-->
+
+        <!--		&lt;!&ndash; https://mvnrepository.com/artifact/org.glassfish.jaxb/jaxb-runtime &ndash;&gt;-->
+        <!--		<dependency>-->
+        <!--			<groupId>org.glassfish.jaxb</groupId>-->
+        <!--			<artifactId>jaxb-runtime</artifactId>-->
+        <!--			<version>2.3.5</version>-->
+        <!--		</dependency>-->
+
+    </dependencies>
 
 
     <build>
@@ -248,25 +279,16 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <!--				<configuration>-->
+                <!--					<excludes>-->
+                <!--						<exclude>-->
+                <!--							<groupId>org.projectlombok</groupId>-->
+                <!--							<artifactId>lombok</artifactId>-->
+                <!--						</exclude>-->
+                <!--					</excludes>-->
+                <!--				</configuration>-->
             </plugin>
         </plugins>
-        <resources>
-            <resource>
-                <filtering>false</filtering>
-                <directory>${basedir}/src/main/resources</directory>
-                <includes>
-                    <include>banner.txt</include>
-                </includes>
-            </resource>
-            <resource>
-                <directory>${basedir}/src/main/resources</directory>
-                <targetPath>${basedir}/target/${tpath}</targetPath>
-                <includes>
-                    <include>application-${env}.properties</include>
-                    <include>application.properties</include>
-                </includes>
-            </resource>
-        </resources>
     </build>
 
 </project>
