--- a/danusys-platform/pom.xml
+++ b/danusys-platform/pom.xml
@@ -289,6 +289,15 @@
                 <!--				</configuration>-->
             </plugin>
         </plugins>
+        <resources>
+            <resource>
+                <directory>src/main/resources</directory>
+                <excludes>
+                    <exclude>*.properties</exclude>
+                </excludes>
+                <filtering>false</filtering>
+            </resource>
+        </resources>
     </build>
 
 </project>
