--- a/danusys-platform/pom.xml
+++ b/danusys-platform/pom.xml
@@ -228,6 +228,12 @@
             <artifactId>thymeleaf-extras-springsecurity5</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.java-websocket</groupId>
+            <artifactId>Java-WebSocket</artifactId>
+            <version>1.5.3</version>
+        </dependency>
+
         <!--		<dependency>-->
         <!--			<groupId>com.google.guava</groupId>-->
         <!--			<artifactId>guava</artifactId>-->
