--- a/danusys-platform/src/main/resources/application-gm.properties
+++ b/danusys-platform/src/main/resources/application-gm.properties
@@ -6,7 +6,8 @@ spring.profiles.active=gm
 ## TODO : \uAD11\uBA85 \uC2E4\uC11C\uBC84 DB \uC815\uBCF4 \uD544\uC694
 ## Database Setting (postgresql)
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://192.168.14.100:5432/iot_platform
+#spring.datasource.url=jdbc:postgresql://192.168.14.100:5432/iot_platform
+spring.datasource.url=jdbc:postgresql://172.20.20.201:5432/iot_platform
 spring.datasource.username=gm
 spring.datasource.password=Danu1002!!
 
