--- a/danusys-platform/src/main/resources/application.properties
+++ b/danusys-platform/src/main/resources/application.properties
@@ -13,6 +13,10 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL95Dialect
 spring.jpa.properties.hibernate.use_sql_comments=false
 #spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
 
+## spring boot file max size setting
+spring.servlet.multipart.maxFileSize=2GB
+spring.servlet.multipart.maxRequestSize=2GB
+
 ## Query Parameter
 #logging.level.org.hibernate.type.descriptor.sql=trace
 #spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
